api/Language.g4
grammar Language;

options { caseInsensitive = false; }

// antlr4 -Dlanguage=CSharp -o analyzer -package analyzer -visitor *.g4

program: dcl*;

dcl: varDcl | stmt;

varDcl: 'var' ID type ('=' expr)?;

stmt:
	expr 						# ExprStmt
	| 'fmt.Println(' exprList ')'	# PrintStmt;

type: 'int' 
	| 'float64' 
	| 'string' 
	| 'bool' 
	| 'rune';

exprList:
	expr (',' expr)* 
	; 

expr:
	
	// Arithmetic operations
	'-' expr						# Negate
	| expr op = ('*' | '/') expr	# MulDiv
	| expr op = ('+' | '-') expr	# AddSub
	| expr '%' expr					# Mod
	| ID '+=' expr					# AddAssign
	| ID '-=' expr					# SubAssign

	// Relational operations
	| expr op = '<' expr	# Relational
	| expr op = '<=' expr	# Relational
	| expr op = '>' expr	# Relational
	| expr op = '>=' expr	# Relational

	// comparison operations
	| expr op = '==' expr	# Comparison
	| expr op = '!=' expr	# Comparison

	// Assignment operations
	| ID op=('=' | ':=') expr # Assign

	// Logical operations
	| expr op = ('&&' | '||') expr	# Logical
	| '!' expr						# Not

	// Primitive data types
	| INT		# Int
	| DECIMAL	# Decimal
	| RUNE		# Rune
	| STRING	# String
	| BOOL		# Bool
	| ID		# Identifier
	| '(' expr ')' # Parens
	;

// Sentences of control

INT: [0-9]+;
DECIMAL: [0-9]+ ('.' [0-9]+);
RUNE: '\'' (ESC_SEQ | ~['\\]) '\'';
STRING: '"' (ESC_SEQ | ~["\\])* '"';
BOOL: 'true' | 'false';
ID: [a-zA-Z_][a-zA-Z0-9_]*;

// Skip
WS: [ \t\r\n]+ -> skip;
COMENTARIO: '//' .*? ('\n' | EOF) -> skip;
COMENTARIO_MULTILINEA: '/*' .*? '*/' -> skip;

// escape sequences
fragment ESC_SEQ: '\\' [btnr"\\];
